--- a/style.css
+++ b/style.css
@@ -42,32 +42,85 @@ body {
 }
 
 .tower {
-    width: 15px;
+    width: 2.5vw;
     height: 30vh;
     background: #F57D00;
     position: absolute;
     bottom: 30px;
     box-shadow: inset 0px 0px 16px 1px rgba(0,0,0,0.6);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
 }
 
-ul {
+#towerList {
     list-style: none;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     width: 100%;
     margin: 0;
-    padding: 0;
-    left: 100px;
+    padding: 0 3vw;
 }
 
-@media (min-width: 900px) {
-    .tower {
-        width: 25px;
-    }
-    #towerBox {
-        width: 60vw;
-    }
-    #towerBase {
-        width: 50vw;
-    }
+.ring {
+    background: black;
+    width: 15vw;
+    height: 15px;
+    bottom: 3vh;
+    left: -6vw;
+    position: absolute;
+    border-radius: 5px;
+    background: green;
+}
+
+#optionBox {
+    display: flex;
+    justify-content: center;
+    padding: 5px 10px;
+    padding-bottom: 25px;
+    background: #64b5f6;
+    width: fit-content;
+    margin: 20px auto;
+    box-shadow: 4px 4px 16px 0px rgba(0,0,0,0.75);
+    border-radius: 10px;
+}
+
+.options {
+    margin: 0 20px;
+    text-align: center;
+    color: white;
+}
+
+#submitButton {
+    text-align: center;
+    margin: 0 auto;
+    width: fit-content;
+    background-color: #ff5252;
+    padding: 5px 15px;
+    border-radius: 10px;
+    box-shadow: inset 0px 0px 16px 1px rgba(0,0,0,0.6);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bold;
+    color: wheat;
+}
+
+#submitButton:hover {
+    background-color: #c50e29;
+    cursor: pointer;
+    box-shadow: 0px 0px 16px 1px rgba(0,0,0,0.6);
+}
+
+button {
+    border-radius: 5px;
+    background-color: wheat;
+    margin: 0 10px;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+span {
+    font-family: monospace;
+    font-size: 20px;
+    color: white;
+    font-weight: bolder;
 }
