--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 
 #title {
     font-family: monospace;
-    font-size: 5vh;
+    font-size: 30px;
     font-style: italic;
     text-align: center;
     text-decoration: underline;
@@ -19,8 +19,8 @@ body {
 }
 
 #towerBox {
-    width: 80vw;
-    height: 45vh;
+    width: 400px;
+    height: 250px;
     background: #bcffc1;
     margin: 0 auto;
     border-radius: 10px;
@@ -32,8 +32,8 @@ body {
 
 #towerBase {
     background: #BA8C63;
-    width: 70vw;
-    height: 3vh;
+    width: 350px;
+    height: 16px;
     bottom: 0px;
     position: absolute;
     bottom: 30px;
@@ -42,15 +42,21 @@ body {
 }
 
 .tower {
-    width: 2.5vw;
-    height: 30vh;
-    background: #F57D00;
-    position: absolute;
-    bottom: 30px;
+    width: 15px;
+    height: 150px;
     box-shadow: inset 0px 0px 16px 1px rgba(0,0,0,0.6);
     display: flex;
+    position: relative;
+    bottom: -5px;
     flex-direction: column;
     justify-content: flex-end;
+}
+
+li {
+    width: 100%;
+    margin: auto;
+    display: flex;
+    justify-content: center;
 }
 
 #towerList {
@@ -58,19 +64,18 @@ body {
     display: flex;
     justify-content: space-around;
     width: 100%;
-    margin: 0;
-    padding: 0 3vw;
+    padding: 0 30px;
 }
 
 .ring {
     background: black;
-    width: 15vw;
+    width: 95px;
     height: 15px;
-    bottom: 3vh;
-    left: -6vw;
+    margin: 0 auto;
     position: absolute;
     border-radius: 5px;
     background: green;
+    bottom: 46px;
 }
 
 #optionBox {
