--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 
 #title {
     font-family: monospace;
-    font-size: 30px;
+    font-size: 3em;
     font-style: italic;
     text-align: center;
     text-decoration: underline;
@@ -19,8 +19,8 @@ body {
 }
 
 #towerBox {
-    width: 400px;
-    height: 250px;
+    width: 25em;
+    height: 15em;
     background: #bcffc1;
     margin: 0 auto;
     border-radius: 10px;
@@ -32,8 +32,8 @@ body {
 
 #towerBase {
     background: #BA8C63;
-    width: 350px;
-    height: 16px;
+    width: 23em;
+    height: 1em;
     bottom: 0px;
     position: absolute;
     bottom: 30px;
@@ -42,8 +42,8 @@ body {
 }
 
 .tower {
-    width: 15px;
-    height: 150px;
+    width: 1em;
+    height: 9em;
     box-shadow: inset 0px 0px 16px 1px rgba(0,0,0,0.6);
     display: flex;
     position: relative;
@@ -94,25 +94,6 @@ li {
     margin: 0 20px;
     text-align: center;
     color: white;
-}
-
-#submitButton {
-    text-align: center;
-    margin: 0 auto;
-    width: fit-content;
-    background-color: #ff5252;
-    padding: 5px 15px;
-    border-radius: 10px;
-    box-shadow: inset 0px 0px 16px 1px rgba(0,0,0,0.6);
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: bold;
-    color: wheat;
-}
-
-#submitButton:hover {
-    background-color: #c50e29;
-    cursor: pointer;
-    box-shadow: 0px 0px 16px 1px rgba(0,0,0,0.6);
 }
 
 button {
