changed css and js

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     background: #ffbcd9;
     margin: 0;
-    border: 10px solid #ff70ae;
+    border: 1em solid #ff70ae;
     position: fixed;
     top: 0px;
     left: 0px;
